syntax = "proto2";
import "WireFormats.proto";


option java_package = "akka.remote.instrumentation";
option optimize_for = SPEED;


/************************************************
 *   Kamon-specific additions to the protocol
 ************************************************/

message AckAndTraceContextAwareEnvelopeContainer {
    optional AcknowledgementInfo ack = 1;
    optional TraceContextAwareRemoteEnvelope envelope = 2;
}

message TraceContextAwareRemoteEnvelope {
    required ActorRefData recipient = 1;
    required SerializedMessage message = 2;
    optional ActorRefData sender = 4;
    optional fixed64 seq = 5;

    optional RemoteTraceContext traceContext = 15;
}

message RemoteTraceContext {
    required bytes context = 1;
}

